--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": []
           },
@@ -88,6 +89,23 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "alchemysoul:build:production",
+              "serveTarget": "alchemysoul:serve:production"
+            },
+            "development": {
+              "buildTarget": "alchemysoul:build:development",
+              "serveTarget": "alchemysoul:serve:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
